[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scenes/Level/Sc_Sluice.tscn" type="PackedScene" id=1]
[ext_resource path="res://TileMaps/Tm_Level.tres" type="TileSet" id=2]
[ext_resource path="res://Scenes/Level/Scripts/Level.gd" type="Script" id=3]
[ext_resource path="res://TileMaps/TileMapTutorial_Boden.tres" type="TileSet" id=4]
[ext_resource path="res://TileMaps/Shadow_tileset.tres" type="TileSet" id=5]
[ext_resource path="res://TileMaps/TileMapTutorial.tres" type="TileSet" id=6]
[ext_resource path="res://Scenes/UI/LevelCanvas.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Level/Difficulties/Environment.gd" type="Script" id=9]
[ext_resource path="res://Scenes/Level/Difficulties/Enemies.gd" type="Script" id=10]
[ext_resource path="res://Scenes/Level/Difficulties/Barrels.gd" type="Script" id=11]
[ext_resource path="res://TileMaps/Floor_Imperfections.tres" type="TileSet" id=16]
[ext_resource path="res://TileMaps/Easy_Walls.tres" type="TileSet" id=17]
[ext_resource path="res://TileMaps/Mid_Walls.tres" type="TileSet" id=18]
[ext_resource path="res://TileMaps/Hard_Walls.tres" type="TileSet" id=19]
[ext_resource path="res://TileMaps/Boss_Walls.tres" type="TileSet" id=20]
[ext_resource path="res://TileMaps/Arena_walls.tres" type="TileSet" id=21]

[node name="Level" type="Node2D"]
script = ExtResource( 3 )

[node name="LevelCanvas" parent="." instance=ExtResource( 7 )]

[node name="Tilemaps" type="Node2D" parent="."]

[node name="GroundTIleMap" type="TileMap" parent="Tilemaps"]
scale = Vector2( 0.05, 0.05 )
z_index = -5
tile_set = ExtResource( 4 )
cell_size = Vector2( 1280, 896 )
collision_layer = 0
collision_mask = 0
format = 1

[node name="Shadow1" type="TileMap" parent="Tilemaps"]
scale = Vector2( 0.1, 0.1 )
tile_set = ExtResource( 5 )
cell_size = Vector2( 320, 320 )
format = 1
tile_data = PoolIntArray( -9893762, 0, 0 )

[node name="Shdow2" type="TileMap" parent="Tilemaps"]
scale = Vector2( 0.1, 0.1 )
tile_set = ExtResource( 5 )
cell_size = Vector2( 320, 320 )
format = 1
tile_data = PoolIntArray( -81196254, 0, 0, 85075212, 0, 0 )

[node name="Floor Imperfections" type="TileMap" parent="Tilemaps/Shdow2"]
scale = Vector2( 4, 4 )
tile_set = ExtResource( 16 )
cell_size = Vector2( 320, 320 )
format = 1

[node name="Wall" type="Node2D" parent="Tilemaps"]

[node name="Backwall" type="TileMap" parent="Tilemaps/Wall"]
scale = Vector2( 0.1, 0.1 )
tile_set = ExtResource( 6 )
cell_size = Vector2( 640, 640 )
collision_layer = 4
collision_mask = 5
format = 1

[node name="Wall1" type="TileMap" parent="Tilemaps/Wall"]
scale = Vector2( 0.1, 0.1 )
tile_set = ExtResource( 17 )
cell_size = Vector2( 640, 640 )
collision_layer = 4
collision_mask = 5
format = 1

[node name="Wall2" type="TileMap" parent="Tilemaps/Wall"]
scale = Vector2( 0.1, 0.1 )
tile_set = ExtResource( 18 )
cell_size = Vector2( 640, 640 )
collision_layer = 4
collision_mask = 5
format = 1

[node name="Wall3" type="TileMap" parent="Tilemaps/Wall"]
scale = Vector2( 0.1, 0.1 )
tile_set = ExtResource( 19 )
cell_size = Vector2( 640, 640 )
collision_layer = 4
collision_mask = 5
format = 1

[node name="Wall4" type="TileMap" parent="Tilemaps/Wall"]
scale = Vector2( 0.1, 0.1 )
tile_set = ExtResource( 21 )
cell_size = Vector2( 640, 640 )
collision_layer = 4
collision_mask = 5
format = 1

[node name="Wall5" type="TileMap" parent="Tilemaps/Wall"]
scale = Vector2( 0.1, 0.1 )
tile_set = ExtResource( 20 )
cell_size = Vector2( 640, 640 )
collision_layer = 4
collision_mask = 5
format = 1

[node name="Wallfix" type="Node2D" parent="Tilemaps"]

[node name="Backwall" type="TileMap" parent="Tilemaps/Wallfix"]
scale = Vector2( 0.1, 0.1 )
tile_set = ExtResource( 6 )
cell_size = Vector2( 640, 640 )
collision_layer = 4
collision_mask = 5
format = 1

[node name="Wall1" type="TileMap" parent="Tilemaps/Wallfix"]
scale = Vector2( 0.1, 0.1 )
tile_set = ExtResource( 17 )
cell_size = Vector2( 640, 640 )
collision_layer = 4
collision_mask = 5
format = 1

[node name="Wall2" type="TileMap" parent="Tilemaps/Wallfix"]
scale = Vector2( 0.1, 0.1 )
tile_set = ExtResource( 18 )
cell_size = Vector2( 640, 640 )
collision_layer = 4
collision_mask = 5
format = 1

[node name="Wall3" type="TileMap" parent="Tilemaps/Wallfix"]
scale = Vector2( 0.1, 0.1 )
tile_set = ExtResource( 19 )
cell_size = Vector2( 640, 640 )
collision_layer = 4
collision_mask = 5
format = 1

[node name="Wall4" type="TileMap" parent="Tilemaps/Wallfix"]
scale = Vector2( 0.1, 0.1 )
tile_set = ExtResource( 21 )
cell_size = Vector2( 640, 640 )
collision_layer = 4
collision_mask = 5
format = 1

[node name="Wall5" type="TileMap" parent="Tilemaps/Wallfix"]
scale = Vector2( 0.1, 0.1 )
tile_set = ExtResource( 20 )
cell_size = Vector2( 640, 640 )
collision_layer = 4
collision_mask = 5
format = 1

[node name="NavMap" type="TileMap" parent="Tilemaps"]
modulate = Color( 1, 1, 1, 0.329412 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
collision_layer = 0
bake_navigation = true
format = 1

[node name="Wallfix2" type="TileMap" parent="."]
scale = Vector2( 0.1, 0.1 )
tile_set = ExtResource( 6 )
cell_size = Vector2( 640, 640 )
collision_layer = 4
collision_mask = 5
format = 1

[node name="DE" type="Node2D" parent="."]

[node name="Barrels" type="Node2D" parent="."]
script = ExtResource( 11 )

[node name="ItemHolder" type="Node2D" parent="Barrels"]

[node name="Enemies" type="Node2D" parent="."]
script = ExtResource( 10 )

[node name="Environment" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="StartSluice" parent="." instance=ExtResource( 1 )]
position = Vector2( -215, 75 )

[node name="EndSluice" parent="." instance=ExtResource( 1 )]
position = Vector2( 1312, 89 )

[connection signal="child_exiting_tree" from="Enemies" to="." method="_on_Enemies_child_exiting_tree"]
[connection signal="OnLevelStart" from="StartSluice" to="." method="_on_StartSluice_OnLevelStart"]
[connection signal="OnLevelEnd" from="EndSluice" to="." method="_on_EndSluice_OnLevelEnd"]
